# akai-remote-pcb

./: .envrc  .gitignore  README.md  akai-remote-pcb.kicad_pcb  akai-remote-pcb.kicad_pro  akai-remote-pcb.kicad_sch  flake.nix  fp-lib-table
.github/workflows/: pcb_image.yaml  render_pdf.yaml
LICENSES/: MIT.txt
custom_libraries/xiao ESP32C3_PCB.pretty/: MOUDLE14P-SMD-2.54-21X17.8MM.kicad_mod
firmware/: Cargo.toml  build.rs  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/.helix/: languages.toml
firmware/src/: gpio.rs  index.html  lib.rs  web.rs  wifi.rs
hardware/: REUSE.toml  sym-lib-table
hardware/custom_libraries/akai_gx_635_remote_control_port.pretty/: AKAI_GX_635_REMOTE_CONTROL_PORT.kicad_mod
